# CADelta

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/cadelta/: cli.py  matcher.py  reader.py  signature.py  writer.py
src/cadelta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cadelta/gui/: __init__.py  __main__.py  app.py  defaults.py  excel_report.py  main_view.py  qt_worker.py  settings.py  settings_view.py  theme.py  worker.py
tests/: bench.py  conftest.py  test_excel_report.py  test_gui_app.py  test_gui_settings.py  test_gui_theme.py  test_gui_worker.py  test_integration.py  test_matcher.py  test_signature.py  test_writer_flags.py
