[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadelta"
version = "0.1.0"
description = "Visual diff for STEP CAD files: colors added/removed/moved parts in a single output."
requires-python = ">=3.11"
dependencies = [
    "cadquery-ocp>=7.7",
    "numpy",
    "click",
    # GUI runtime deps. PySide6 (Qt) powers the desktop app; openpyxl backs
    # the optional Excel report. Both are pip-only.
    "PySide6>=6.6",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    # Used to build the desktop .exe via build/cadelta_gui.spec; not needed
    # to run the app itself, only to bundle it.
    "pyinstaller>=6.0",
]

[project.scripts]
cadelta = "cadelta.cli:main"
cadelta-gui = "cadelta.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
